--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Irshad Ahmad">Irshad Ahmad</h1>
+          <h1 class="name" title="Irshad Ahmad">Irshad</h1>
 
           <p class="title">Web developer</p>
         </div>
