--- a/index.html
+++ b/index.html
@@ -285,11 +285,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Irshad was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    Irshad was hired to create a corporate identity, and we were very happy with the results. He has a lot of experience and is very focused on understanding and meeting the needs of the client.
                   </p>
                 </div>
 
@@ -307,11 +303,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Irshad was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    Irshad was hired to design a corporate identity, and we were very satisfied with her work. He has a lot of experience and really focuses on understanding the client's needs.
                   </p>
                 </div>
 
