--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
         <section class="about-text">
           <p>
-            I am expert Web developer having 1 year experience in crafting stunning and functional websites for many businesses. My goal to create a user-friendly websites that meet the client's needs and turn their ideas into digital reality. I am confident in to deliver a websites which meet market trends and boost the business too.
+            I am expert Web developer having several year experience in crafting stunning and functional websites for many businesses. My goal to create a user-friendly websites that meet the client's needs and turn their ideas into digital reality. I am confident in to deliver a websites which meet market trends and boost the business too.
 
 
           </p>
