--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 <p>
                   Irshad was hired to create a corporate identity. We were very pleased with the work done. She has a
                   lot of experience
-                  and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
+                  and is very concerned about the needs of the client. Lorem ipsum dolor sit amet, ullamcous cididt
                   consectetur adipiscing
                   elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
                 </p>
@@ -419,7 +419,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Govt Model High School</h4>
+              <h4 class="h4 timeline-item-title">Punjab Group of Collages</h4>
 
               <span>2021 — 2023</span>
 
@@ -429,9 +429,9 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Govt Graduate Collage</h4>
+              <h4 class="h4 timeline-item-title">Punjab University of Lahore</h4>
 
-              <span>2022 — 2024</span>
+              <span>Continue</span>
 
 
             </li>
